--- a/Customer/orderDetails.html
+++ b/Customer/orderDetails.html
@@ -158,31 +158,31 @@
                                 <p class="mb-2">Lorem ipsum dolor sit amet consectetur.</p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column m-1">
+                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column m-1">
+                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column m-1">
+                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column m-1">
+                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column m-1">
+                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
@@ -194,7 +194,63 @@
                                 <div class="form-group">
                                     <textarea class="form-control border-warning rounded-pill "
                                         id="exampleFormControlTextarea1" rows="3"></textarea>
-                                    <div class="btn btn-block btn-dark rounded-pill mt-2">Submit</div>
+                                    <div class="custom-file rounded-pill my-2">
+                                        <input type="file" class="custom-file-input rounded-pill " id="customFile">
+                                        <label class="custom-file-label rounded-pill " for="customFile">Add Attachment</label>
+                                    </div>
+                                    <ul class="files-list list-inline d-flex flex-row flex-wrap ">
+                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div
+                                                class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div
+                                                class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div
+                                                class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div
+                                                class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div
+                                                class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                    </ul>
+                                    <div class="btn btn-block btn-dark rounded-pill">Submit</div>
                                 </div>
                             </div>
                         </div>
@@ -254,7 +310,8 @@
                             <div class="col-12 col-md-9">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark btn-lg d-flex flex-column m-1">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
@@ -267,31 +324,36 @@
                             <div class="col-12 col-md-9">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark btn-lg d-flex flex-column m-1">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark btn-lg d-flex flex-column m-1">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark btn-lg d-flex flex-column m-1">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark btn-lg d-flex flex-column m-1">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
                                     </li>
                                     <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark btn-lg d-flex flex-column m-1">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
                                             <i class="far fa-file"></i>
                                             <p class="m-0 small">bdudj.docx</p>
                                         </div>
@@ -425,7 +487,8 @@
                                 </a>
                             </li>
                         </ul>
-                        <a href="payment.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal px-5 mt-4">
+                        <a href="payment.html"
+                            class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal px-5 mt-4">
                             Request one Invoice for This Order
                         </a>
                     </div>
