Add Provider Pages

--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -205,8 +205,7 @@
                                         <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
                                     </span>
                                     <span>300 USD</span>
-                                    <span>Paypal</span>
-                                    <span>8/21/2019 11:53:36 AM</span>
+
                                     <span class="d-flex flex-column align-self-end">
                                         <span class=" badge badge-pill badge-success align-self-end">Colected</span>
                                     </span>
@@ -219,8 +218,7 @@
                                         <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
                                     </span>
                                     <span>300 USD</span>
-                                    <span>Paypal</span>
-                                    <span>8/21/2019 11:53:36 AM</span>
+
                                     <span class="d-flex flex-column align-self-end">
                                         <span class=" badge badge-pill badge-success align-self-end">Colected</span>
                                     </span>
@@ -233,8 +231,7 @@
                                         <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
                                     </span>
                                     <span>300 USD</span>
-                                    <span>Paypal</span>
-                                    <span>8/21/2019 11:53:36 AM</span>
+
                                     <span class="d-flex flex-column align-self-end">
                                         <span class=" badge badge-pill badge-success align-self-end">Colected</span>
                                     </span>
@@ -247,8 +244,7 @@
                                         <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
                                     </span>
                                     <span>300 USD</span>
-                                    <span>Paypal</span>
-                                    <span>8/21/2019 11:53:36 AM</span>
+
                                     <span class="d-flex flex-column align-self-end">
                                         <span class=" badge badge-pill badge-danger">Unpaid</span>
                                         <!-- <div class="btn nz-btn-gold btn-block align-self-end mt-2">Pay NOW</div> -->
@@ -263,8 +259,7 @@
                                         <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
                                     </span>
                                     <span>300 USD</span>
-                                    <span>Paypal</span>
-                                    <span>8/21/2019 11:53:36 AM</span>
+
                                     <span class="d-flex flex-column align-self-end">
                                         <span class=" badge badge-pill badge-success align-self-end">Colected</span>
                                     </span>
@@ -277,8 +272,7 @@
                                         <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
                                     </span>
                                     <span>300 USD</span>
-                                    <span>Paypal</span>
-                                    <span>8/21/2019 11:53:36 AM</span>
+
                                     <span class="d-flex flex-column align-self-end">
                                         <span class=" badge badge-pill badge-success align-self-end">Colected</span>
                                     </span>
@@ -291,8 +285,7 @@
                                         <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
                                     </span>
                                     <span>300 USD</span>
-                                    <span>Paypal</span>
-                                    <span>8/21/2019 11:53:36 AM</span><span class="d-flex flex-column align-self-end">
+                                    <span class="d-flex flex-column align-self-end">
                                         <span class=" badge badge-pill badge-success align-self-end">Colected</span>
                                     </span>
                                 </a>
@@ -470,9 +463,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span class=" badge badge-pill badge-warning align-self-end">Receive
                                                 Bids</span></a></li>
                                     <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
@@ -480,9 +472,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span
                                                 class=" badge badge-pill badge-success align-self-end">Completed</span></a>
                                     </li>
@@ -491,9 +482,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span
                                                 class=" badge badge-pill badge-success align-self-end">Completed</span></a>
                                     </li>
@@ -502,9 +492,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span
                                                 class=" badge badge-pill badge-success align-self-end">Completed</span></a>
                                     </li>
@@ -513,9 +502,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span
                                                 class=" badge badge-pill badge-success align-self-end">Completed</span></a>
                                     </li>
@@ -524,9 +512,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span
                                                 class=" badge badge-pill badge-success align-self-end">Completed</span></a>
                                     </li>
@@ -535,9 +522,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span
                                                 class=" badge badge-pill badge-success align-self-end">Completed</span></a>
                                     </li>
@@ -546,9 +532,8 @@
                                                 class="align-self-start font-weight-bold"><i
                                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
                                             <span>Legal Translation</span>
-                                            <span>Arabic => German</span>
                                             <span>300 USD</span>
-                                            <span>8/21/2019 11:53:36 AM</span>
+                                            <span>8/21/2019</span>
                                             <span
                                                 class=" badge badge-pill badge-dark align-self-end">Canceled</span></a>
                                     </li>
