--- a/login.html
+++ b/login.html
@@ -90,7 +90,8 @@
                                     <label class="custom-control-label" for="customCheck1">Remamber me</label>
                                 </div>
                             </div>
-                            <a href="dashboad.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
+                            <!-- <a href="provider/dashboard.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal" -->
+                            <a href="provider/blank.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
                                 >Login</a>
                         </div>
                     </form>
