Add the blamnk content to all pages

--- a/provider/blank.html
+++ b/provider/blank.html
@@ -62,7 +62,7 @@
     </section>
 
     <section class="section-main container-fluid">
-        <div class="row">
+        <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group " id="mainTabs" role="tablist">
                     <a href="dashboad.html" class="list-group-item list-group-item-action active">
@@ -91,41 +91,9 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-9 shadow p-5">
+            <div class="col-12 col-lg-10 shadow py-4">
                 <h1 class="section-title-side"><span>Blank</span></h1>
-                <ul class="list-group">
-                    <li class="list-group-item disabled" aria-disabled="true">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">
-                        <ul class="list-group">
-                            <li class="list-group-item disabled" aria-disabled="true">Cras justo odio</li>
-                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                            <li class="list-group-item">Morbi leo risus</li>
-                            <li class="list-group-item">Porta ac consectetur ac</li>
-                            <li class="list-group-item">Vestibulum at eros</li>
-                        </ul>
-                    </li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                    <li class="list-group-item">
-                        <ul class="list-group">
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Cras justo odio
-                                <span class="badge badge-primary badge-pill">14</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Dapibus ac facilisis in
-                                <span class="badge badge-primary badge-pill">2</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Morbi leo risus
-                                <span class="badge badge-primary badge-pill">1</span>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                </ul>
+
             </div>
         </div>
     </section>
