Add bids to the dashboard

--- a/provider/bidDetails.html
+++ b/provider/bidDetails.html
@@ -65,11 +65,11 @@
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item list-group-item-action active">
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
                     </a>
-                    <a href="bids.html" class="list-group-item list-group-item-action ">
+                    <a href="bids.html" class="list-group-item list-group-item-action active">
                         <i class="fas fa-briefcase fa-2x mr-2"></i>
                         <span>Bids</span>
                     </a>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side"><span>Blank</span></h1>
+                <h1 class="section-title-side"><span>Bid #85796775457</span></h1>
 
             </div>
         </div>
