--- a/provider/bids.html
+++ b/provider/bids.html
@@ -65,11 +65,11 @@
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item list-group-item-action active">
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
                     </a>
-                    <a href="bids.html" class="list-group-item list-group-item-action ">
+                    <a href="bids.html" class="list-group-item list-group-item-action active">
                         <i class="fas fa-briefcase fa-2x mr-2"></i>
                         <span>Bids</span>
                     </a>
