--- a/provider/bidDetails.html
+++ b/provider/bidDetails.html
@@ -93,7 +93,198 @@
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
                 <h1 class="section-title-side"><span>Bid #85796775457</span></h1>
+                <div class="row">
 
+                    <div class="col-12 mb-4 col-md-12 order-details-wrapper">
+                        <div class="form-group row">
+                            <label class="col-3">Selected service</label>
+                            <label class="col-12 col-md-9">
+                                <div class="lead font-weight-bold">
+                                    Legal Translation <span class="font-weight-normal"> (Arabic => German) </span>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Estmated Budget</label>
+                            <div class="col-12 col-md-9">
+                                <div class="lead">600 EGP</div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Additional Service</label>
+                            <div class="col-12 col-md-9">
+                                <span class="badge badge-pill badge-warning mr-2">accusantium</span>
+                                <span class="badge badge-pill badge-warning mr-2">Lorem ipsum</span>
+                                <span class="badge badge-pill badge-warning mr-2">Warning</span>
+                                <span class="badge badge-pill badge-warning mr-2">quidem amet adipisci laudantium</span>
+                                <span class="badge badge-pill badge-warning mr-2">ea maiores nulla</span>
+                                <span class="badge badge-pill badge-warning mr-2">Lorem ipsum</span>
+                                <span class="badge badge-pill badge-warning mr-2">quidem amet adipisci laudantium</span>
+                                <span class="badge badge-pill badge-warning mr-2">ea maiores nulla</span>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Confidentiality Agreement</label>
+                            <label class="col-12 col-md-9">Not Required</label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Required Sample</label>
+                            <label class="col-12 col-md-9">Required</label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Creation Date</label>
+                            <label class="col-12 col-md-9">8/21/2019 11:53:36 AM</label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Special Instructions</label>
+                            <label class="col-12 col-md-9">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Numquam
+                                quidem amet adipisci laudantium, eius vel sint sequi accusantium repudiandae ipsam
+                                consequatur ea maiores nulla ipsa quam earum perspiciatis perferendis tempora.
+                            </label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Files</label>
+                            <div class="col-12 col-md-9">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-12">
+                        <h1 class="section-title-side"><span>Submit your Bid</span></h1>
+                        <form>
+                            <div class="form-row">
+                                <div class="col-12 col-md-12 form-group">
+                                    <label for="firstName">Bid Amount</label>
+                                    <div class="input-group mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text" id="basic-addon1">EGP</span>
+                                        </div>
+                                        <input type="number" class="form-control" id="firstName"
+                                            placeholder="Try not to exceed the estimated amount" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row align-items-end">
+                                <div class="col-12 col-md-6 form-group">
+                                    <label for="validationDefault03">Delivery Day</label>
+                                    <input id="validationDefault03" type="date" class="form-control" id="loginpassword"
+                                        placeholder="Your Company Name">
+                                </div>
+                                <div class="col-12 col-md-6 form-group">
+                                    <label for="validationDefault03">Delivery time</label>
+                                    <input id="validationDefault03" type="time" class="form-control" id="loginpassword"
+                                        placeholder="Your Company Name">
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-12 col-md-12 form-group">
+                                    <label for="firstName">Cover Letter</label>
+                                    <textarea type="number" class="form-control" id="firstName"  rows="5"
+                                        placeholder="Try not to exceed the estimated amount" required></textarea>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-12 form-group">
+                                    <div class="custom-control custom-checkbox">
+                                        <input id="validationDefault03" type="checkbox" class="custom-control-input"
+                                            id="customCheck1" checked>
+                                        <label class="custom-control-label" for="customCheck1">
+                                            I Agree on Confidentiality Agreement
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class=" col-12 col-md-12 form-group">
+                                    <div class="custom-file rounded-pill my-2">
+                                        <input type="file" class="custom-file-input rounded-pill " id="customFile">
+                                        <label class="custom-file-label rounded-pill " for="customFile">Add
+                                            Samples</label>
+                                    </div>
+                                    <ul class="files-list list-inline d-flex flex-row flex-wrap ">
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <a href="dashboad.html"
+                                    class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal">SubmitS</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
