Fix Pay buttons

--- a/Customer/invoiceDetails.html
+++ b/Customer/invoiceDetails.html
@@ -157,16 +157,24 @@
                             </div>
                         </div>
                         <div class=" row">
-                            <label class="col-3">Pay Now</label>
+                            <label class="col-12 col-md-3">Pay Now</label>
                             <div class="col-12 col-md-9">
-                                <a href="payment.html"
+                                <div class="row">
+                                    <div class="col-12 col-lg-3 ">
+                                        <div class="btn btn-block mb-3 nz-btn-gold btn-lg text-uppercase font-weight-bold">PayPal</div>
+                                    </div>
+                                    <div class="col-12 col-lg-3 ">
+                                        <div class="btn btn-block mb-3 btn-outline-gold btn-lg text-uppercase font-weight-bold">Credit Card</div>
+                                    </div>
+                                </div>
+                                <!-- <a href="payment.html"
                                     class="btn nz-btn-gold btn-lg text-uppercase font-weight-bold px-5 mx-2">
                                     PayPal
                                 </a>
                                 <a href="payment.html"
                                     class="btn btn-outline-gold btn-lg text-uppercase font-weight-bold px-5 mx-2">
                                     Credit Card
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     </div>
