Fix Pay buttons

--- a/Customer/invoiceDetails.html
+++ b/Customer/invoiceDetails.html
@@ -161,10 +161,10 @@
                             <div class="col-12 col-md-9">
                                 <div class="row">
                                     <div class="col-12 col-lg-3 ">
-                                        <div class="btn btn-block mb-3 nz-btn-gold btn-lg text-uppercase font-weight-bold">PayPal</div>
+                                        <a  href="payment.html" class="btn btn-block mb-3 nz-btn-gold btn-lg text-uppercase font-weight-bold">PayPal</a  href="payment.html">
                                     </div>
                                     <div class="col-12 col-lg-3 ">
-                                        <div class="btn btn-block mb-3 btn-outline-gold btn-lg text-uppercase font-weight-bold">Credit Card</div>
+                                        <a  href="payment.html" class="btn btn-block mb-3 btn-outline-gold btn-lg text-uppercase font-weight-bold">Credit Card</a>
                                     </div>
                                 </div>
                                 <!-- <a href="payment.html"
