--- a/Customer/select_service_mode.html
+++ b/Customer/select_service_mode.html
@@ -98,7 +98,95 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 shadow py-4">
+            <div class="col-12 col-lg-10 shadow py-4 p-4">
+                <h1 class="section-title-side"><span>Select Your Service</span></h1>
+                <div class="row mb-4">
+                    <div class="col-12 col-lg-3 bids-options-wrapper mb-4">
+                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                            aria-orientation="vertical">
+                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
+                                role="tab" aria-controls="v-pills-home" aria-selected="true">Translation</a>
+                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
+                                role="tab" aria-controls="v-pills-profile" aria-selected="false">Document Clearance</a>
+                            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages"
+                                role="tab" aria-controls="v-pills-messages" aria-selected="false">Legal Advice</a>
+                            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings"
+                                role="tab" aria-controls="v-pills-settings" aria-selected="false">SME Services</a>
+                            <a class="nav-link" id="v-pills-other-tab" data-toggle="pill" href="#v-pills-other"
+                                role="tab" aria-controls="v-pills-other" aria-selected="false">Other Services</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-9">
+                        <div class="tab-content" id="v-pills-tabContent">
+                            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                                aria-labelledby="v-pills-home-tab">
+                                <ul class="d-flex flex-wrap flex-row p-0">
+                                    <li class="list-group-item m-2 flex-fill ">Medical</li>
+                                    <li class="list-group-item m-2 flex-fill">Legal</li>
+                                    <li class="list-group-item m-2 flex-fill">Financial</li>
+                                    <li class="list-group-item m-2 flex-fill">Subtitling</li>
+                                    <li class="list-group-item m-2 flex-fill">Website</li>
+                                    <li class="list-group-item m-2 flex-fill">Interpretation</li>
+                                    <li class="list-group-item m-2 flex-fill">Scientific</li>
+                                </ul>
+                            </div>
+                            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
+                                aria-labelledby="v-pills-profile-tab">
+                                <ul class="d-flex flex-wrap flex-row p-0">
+                                    <li class="list-group-item m-2 flex-fill">Pro</li>
+                                    <li class="list-group-item m-2 flex-fill">Company Setup and Formation</li>
+                                    <li class="list-group-item m-2 flex-fill">Attestation and Certification</li>
+                                    <li class="list-group-item m-2 flex-fill">Registration for Patent, Copyright And
+                                        Trademark</li>
+                                    <li class="list-group-item m-2 flex-fill">Product Registration</li>
+                                </ul>
+                            </div>
+                            <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
+                                aria-labelledby="v-pills-messages-tab">
+                                <ul class="d-flex flex-wrap flex-row p-0">
+                                    <li class="list-group-item m-2 flex-fill">Commercial and Corporate low</li>
+                                    <li class="list-group-item m-2 flex-fill">Company incorporation</li>
+                                    <li class="list-group-item m-2 flex-fill">Dispute resolution</li>
+                                    <li class="list-group-item m-2 flex-fill">Immigration and citizenship</li>
+                                    <li class="list-group-item m-2 flex-fill">Intellectual property low</li>
+                                    <li class="list-group-item m-2 flex-fill">Real estate and property low</li>
+                                    <li class="list-group-item m-2 flex-fill">Arbitration low</li>
+                                </ul>
+                            </div>
+                            <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
+                                aria-labelledby="v-pills-settings-tab">
+                                <ul class="d-flex flex-wrap flex-row p-0">
+                                    <li class="list-group-item m-2 flex-fill">Outsourcing</li>
+                                    <li class="list-group-item m-2 flex-fill">VAT registration</li>
+                                    <li class="list-group-item m-2 flex-fill">SME Setup</li>
+                                    <li class="list-group-item m-2 flex-fill">Business accounting</li>
+                                    <li class="list-group-item m-2 flex-fill">Website/app creation</li>
+                                    <li class="list-group-item m-2 flex-fill nz-btn-gold">PRO</li>
+                                </ul>
+                            </div>
+                            <div class="tab-pane fade" id="v-pills-other" role="tabpanel"
+                                aria-labelledby="v-pills-settings-tab">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <button class="btn btn-outline-secondary dropdown-toggle" type="button"
+                                            data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">Choose Category</button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="#">Translation</a>
+                                            <a class="dropdown-item" href="#">Document Clearance</a>
+                                            <a class="dropdown-item" href="#">Legal Advice</a>
+                                            <a class="dropdown-item" href="#">SME Services</a>
+                                            <div role="separator" class="dropdown-divider"></div>
+                                            <a class="dropdown-item" href="#">Other Services</a>
+                                        </div>
+                                    </div>
+                                    <input type="text" class="form-control"
+                                        aria-label="Text input with dropdown button">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <h1 class="section-title-side"><span>Select Service Mode</span></h1>
                 <div class="row mb-5 card-deck">
                     <div class="card rounded-lg">
